<?xml version="1.0" encoding="utf-8"?>

<resources>

    <string name="app_name">IBrand</string>
    <string name="position" translatable="false">position</string>
    <string name="english" translatable="false">English</string>
    <string name="arabic" translatable="false">عربي</string>

    <string name="verification_time">after %1s</string>
    <string name="label_not_allowed_otp">Wrong OTP</string>
    <string name="start_app">Start App</string>
    <string name="skip">Skip</string>
    <string name="login">Login</string>
    <string name="message_copied_to_clipboard">Copied!</string>
    <string name="no_Account_register">No account? <font color="#ED69A0"> Register</font></string>
    <string name="welcome_login">Welcome, Login</string>
    <string name="welcome_login_desc">Login to your account</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="email">E-mail</string>
    <string name="complete_profile">Complete Profile</string>
    <string name="confirmation">Confirmation</string>
    <string name="confirmation_body">Code is sent to your phone</string>
    <string name="resend_code">Resend code</string>
    <string name="general_settings">General Settings</string>
    <string name="choose_lang">Choose language</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="choose_country">Choose Country</string>
    <string name="shopping_now">Shopping Now</string>
    <string name="label_not_allowed_phone">Not allowed phone number !</string>
    <string name="verification_failed">Verification faild!</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="account">My Account</string>
    <string name="brands">Brands</string>
    <string name="categories">Categories</string>
    <string name="select_country">Select Country</string>
    <string name="search">Search</string>
    <string name="select_city">Select City</string>
    <string name="view_all">View All</string>
    <string name="products">Products</string>
    <string name="all_products">All Products</string>
    <string name="save">Save</string>
    <string name="change_password">Change Password</string>
    <string name="guest">Guest</string>
    <string name="edit_account">Edit Account</string>
    <string name="my_orders">My orders</string>
    <string name="favourite">Favourite</string>
    <string name="my_addresses">My Addresses</string>
    <string name="settings">Settings</string>
    <string name="support">Support</string>
    <string name="logOut">Logout</string>


</resources>